fixed arrow on mobile with top bar

--- a/css/style.css
+++ b/css/style.css
@@ -2252,7 +2252,7 @@ h1, h2, h3, h4, h5, h6 a{
     left: 96%;
     font-size: 43px;
     color: #e1e1e1;
-    z-index: 10;
+    z-index: 1100;
     transition: color 0.3s;
 }
 .go-back-arrow:hover {
@@ -2262,9 +2262,9 @@ h1, h2, h3, h4, h5, h6 a{
 
 @media (max-width: 767px) {
     .go-back-arrow {
-        top:15px;
+        top:1px;
         left:auto;
-        right: 30px;
+        right: 25px;
         font-size: 40px;
     }
 }
@@ -2335,8 +2335,8 @@ h1, h2, h3, h4, h5, h6 a{
 /* Mobile: disable hover logic */
 @media (max-width: 767px) {
     .sidebar-burger {
-        top: 20px;
-        left: 20px;
+        top: 10px;
+        left: 15px;
     }
     .sidebar-hover:hover .left-table {
         transform: translateX(-100%) !important;
@@ -2376,6 +2376,23 @@ h1, h2, h3, h4, h5, h6 a{
     .intro-bg-container {
         height: 9%;
         top:2%;
+    }
+}
+
+.top-bar {
+    position: fixed;
+    top: 0; left: 0;
+    width: 100vw;
+    height: 70px;
+    /*background: rgba(255, 0, 0, 0.85); /* semi-transparent dark */
+    background: rgba(17, 8, 35, 0.66); /* semi-transparent dark */
+    backdrop-filter: blur(10px); /* blur effect */
+    z-index: 500;
+    pointer-events: none; /* allow clicks to pass through */
+}
+@media (min-width: 768px) {
+    .top-bar {
+        opacity: 0;
     }
 }
 
